--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.autoSave": "afterDelay",
     "files.autoSaveDelay": 100,
     "cSpell.words": [
+        "sonner",
         "uuidv"
     ],
     "editor.fontSize": 14
